Opened 12 years ago

Closed 12 years ago

#4070 closed defect (fixed)

mpeg2video / wtv resolution regression

Reported by: Carl Eugen Hoyos Owned by:
Priority: important Component: avcodec
Version: git-master Keywords: mpeg2video wtv regression
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

User blade005 reported a regression on the Zeranoe forum. Attached wtv sample is detected with a wrong resolution of 704x480 instead of 1920x1080 since 4dee4a44 - possibly related to ticket #3912 (which was fixed in the following commit).

$ ffmpeg -i 1920x1080_cut.wtv -f null -vframes 1 -map_metadata -1 -
ffmpeg version N-67318-gd2d97b3 Copyright (c) 2000-2014 the FFmpeg developers
  built on Nov  1 2014 10:22:45 with gcc 4.7 (SUSE Linux)
  configuration: --enable-gpl
  libavutil      54. 11.100 / 54. 11.100
  libavcodec     56. 10.100 / 56. 10.100
  libavformat    56. 11.101 / 56. 11.101
  libavdevice    56.  2.100 / 56.  2.100
  libavfilter     5.  2.100 /  5.  2.100
  libswscale      3.  1.101 /  3.  1.101
  libswresample   1.  1.100 /  1.  1.100
  libpostproc    53.  3.100 / 53.  3.100
[wtv @ 0x1ef5d20] truncated file
[mpeg2video @ 0x1ef8840] interlaced frame in progressive sequence, ignoring
[mpeg2video @ 0x1ef8840] invalid frame_pred_frame_dct
[mpeg2video @ 0x1ef8840] slice below image (30 >= 30)
Input #0, wtv, from '1920x1080_cut.wtv':
  Metadata:
    WM/MediaClassPrimaryID: db9830bd-3ab3-4fab-8a371a995f7ff74
    WM/MediaClassSecondaryID: ba7f258a-62f7-47a9-b21f4651c42a000
    Title           : General Hospital
    WM/SubTitleDescription: Franco continues with his plan; Sonny plots against Franco; Nina seeks help from an unexpected source.
    genre           : General;Series;Soap;Soap Opera
    WM/OriginalReleaseTime: 0
    WM/MediaCredits : Maurice Benard/Kristen Alderson/Rebecca Herbst/Laura Wright/Sean Blakemore/Kelly Monaco/Jane Elliot/Roger Howarth/Emme Rylan/Nancy Lee Grahn/Teresa Castillo/Jason Thompson/John J. York/Tyler Christopher/Bryan Craig/Maura West/Chad Duell/Michael Easton/Kel
    service_provider: WFAADT
    service_name    : WFAADT (WFAA-DT)
    WM/MediaNetworkAffiliation: ABC Affiliate
    WM/MediaOriginalChannel: 8
    WM/MediaOriginalChannelSubNumber: 1
    WM/MediaOriginalBroadcastDateTime: 2014-10-17T05:00:00Z
    WM/MediaOriginalRunTime: 17625389814
    WM/MediaIsStereo: true
    WM/MediaIsRepeat: false
    WM/MediaIsLive  : false
    WM/MediaIsTape  : false
    WM/MediaIsDelay : false
    WM/MediaIsSubtitled: false
    WM/MediaIsMovie : false
    WM/MediaIsPremiere: false
    WM/MediaIsFinale: false
    WM/MediaIsSAP   : false
    WM/MediaIsSport : false
    WM/ParentalRating: TV-PG
    WM/Provider     : MediaCenterDefault
    WM/VideoClosedCaptioning: true
    WM/WMRVEncodeTime: 2014-10-17 18:33:37
    WM/WMRVSeriesUID: !MCSeries!48126474
    WM/WMRVServiceID: !MCService!28459137
    WM/WMRVProgramID: !MCProgram!303476976
    WM/WMRVRequestID: 0
    WM/WMRVScheduleItemID: 0
    WM/WMRVQuality  : 0
    WM/WMRVOriginalSoftPrePadding: 2129
    WM/WMRVOriginalSoftPostPadding: 180
    WM/WMRVHardPrePadding: 4294965287
    WM/WMRVHardPostPadding: 0
    WM/WMRVATSCContent: true
    WM/WMRVDTVContent: true
    WM/WMRVHDContent: true
    Duration        : 102635870
    WM/WMRVEndTime  : 2014-10-17 18:33:47
    WM/WMRVBitrate  : 20.971520
    WM/WMRVKeepUntil: 4294967295
    WM/WMRVActualSoftPrePadding: 4294967288
    WM/WMRVActualSoftPostPadding: 4294965724
    WM/WMRVContentProtected: false
    WM/WMRVContentProtectedPercent: 0
    WM/WMRVExpirationDate: 9999-12-31 23:59:59
    WM/WMRVExpirationSpan: 9223372036854775807
    WM/WMRVInBandRatingSystem: 255
    WM/WMRVInBandRatingLevel: 255
    WM/WMRVInBandRatingAttributes: 0
    WM/WMRVWatched  : false
    WM/MediaThumbWidth: 0
    WM/MediaThumbHeight: 0
    WM/MediaThumbStride: 0
    WM/MediaThumbRet: 4
    WM/MediaThumbRatingSystem: 0
    WM/MediaThumbRatingLevel: 0
    WM/MediaThumbRatingAttributes: 0
    WM/MediaThumbAspectRatioX: 0
    WM/MediaThumbAspectRatioY: 0
    WM/MediaThumbTimeStamp: -4616189618054758400
  Duration: 00:00:09.14, start: 2.638995, bitrate: 2240 kb/s
    Stream #0:0[0x1a](eng): Audio: ac3, 48000 Hz, 5.1(side), fltp, 448 kb/s
    Stream #0:1[0x1b](spa): Audio: ac3, 48000 Hz, stereo, fltp, 192 kb/s (visual impaired)
    Stream #0:2[0x1c]: Video: mpeg2video, yuv420p(tv), 704x480, max. 24000 kb/s, 29.97 fps, 29.97 tbr, 10000k tbn, 59.94 tbc
    Stream #0:3[0x1d]: Subtitle: eia_608
Output #0, null, to 'pipe:':
  Metadata:
    encoder         : Lavf56.11.101
    Stream #0:0: Video: rawvideo (I420 / 0x30323449), yuv420p, 704x480, q=2-31, 200 kb/s, 29.97 fps, 29.97 tbn, 29.97 tbc
    Metadata:
      encoder         : Lavc56.10.100 rawvideo
    Stream #0:1: Audio: pcm_s16le, 48000 Hz, 5.1(side), s16, 4608 kb/s
    Metadata:
      encoder         : Lavc56.10.100 pcm_s16le
Stream mapping:
  Stream #0:2 -> #0:0 (mpeg2video (native) -> rawvideo (native))
  Stream #0:0 -> #0:1 (ac3 (native) -> pcm_s16le (native))
Press [q] to stop, [?] for help
Input stream #0:2 frame changed from size:704x480 fmt:yuv420p to size:1920x1080 fmt:yuv420p
frame=    1 fps=0.0 q=0.0 Lsize=N/A time=00:00:00.73 bitrate=N/A
video:0kB audio:162kB subtitle:0kB other streams:0kB global headers:0kB muxing overhead: unknown

Attachments (1)

1920x1080_cut.wtv (2.4 MB ) - added by Carl Eugen Hoyos 12 years ago.

Change History (4)

by Carl Eugen Hoyos, 12 years ago

Attachment: 1920x1080_cut.wtv added

comment:1 by Carl Eugen Hoyos, 12 years ago

Keywords: wtv added

comment:2 by llogan, 12 years ago

Reproduced by developer: set
Status: newopen

comment:3 by Michael Niedermayer, 12 years ago

Resolution: fixed
Status: openclosed
Note: See TracTickets for help on using tickets.