avcodec/mpeg12dec: do not trust AVCodecContext input dimensions

Fixes initial wtv dimensions
Fixes Ticket4070
Signed-off-by: Michael Niedermayer <michaelni@gmx.at>